replication info/state/endpoint